--- a/app/assets/stylesheets/pages/_dashboard.scss
+++ b/app/assets/stylesheets/pages/_dashboard.scss
@@ -4,7 +4,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  margin-top: 15px;
+  margin-top: 0px;
 }
 
 a .dashboard-card-infos h2 {
@@ -29,7 +29,7 @@ a .dashboard-card-infos {
   border-radius: 20px;
   padding: 10px 15px;
   width: 80vw;
-  background:#00B8F5;
+  background:rgb(55, 55, 55);
   height: 90px;
   text-align: left;
   display: flex;
