--- a/app/views/orders/_user-complete.html.erb
+++ b/app/views/orders/_user-complete.html.erb
@@ -1,4 +1,32 @@
-<div class="container order-drugs pb-5">
-  <h2><%= @order.status %></h2>
-  <h3>Your order is complete and will be delivered later today.</h3>
+<div class="flash flash-warning alert alert-dismissible fade show" role="alert">
+  <div class="flash-content">
+    <p><strong>Hi again!</strong> Your order is being delivered as we speak! It will arrive later today ☺️</p>
+    <%= link_to "< Back to your orders", orders_path, class:"button-pharma-index"%>
+  </div>
+  <a data-dismiss="alert" aria-label="Close">
+    <i class="fas fa-times"></i>
+  </a>
+</div>
+
+<div class="pending-view">
+  <h1>Cart</h1>
+  <% @ordered_drugs.each do |ordered_drug| %>
+    <div class="cart-card">
+      <% if ordered_drug.drug.pic.attached?%>
+        <%=cl_image_tag ordered_drug.drug.pic.key%>
+      <%else%>
+        <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/greece.jpg" />
+      <%end%>
+      <div class="cart-card-infos">
+        <h2><%=ordered_drug.drug.name.downcase.capitalize%></h2>
+        <div class=cart-card-bottom>
+          <h6><small><%= ordered_drug.quantity %> x </small> <%= ordered_drug.price %> $</h6>
+        </div>
+      </div>
+    </div>
+  <% end %>
+  <div class="total-price">
+    <h3>Total</h3>
+    <h2>$<%= @order.total_price %></h2>
+  </div>
 </div>
