--- a/app/views/orders/_user-initialize.html.erb
+++ b/app/views/orders/_user-initialize.html.erb
@@ -1,31 +1,36 @@
 <div class="view">
-  <h1>Cart</h1>
-  <% @ordered_drugs.each do |ordered_drug| %>
-    <div class="cart-card">
-      <% if ordered_drug.drug.pic.attached?%>
-        <%=cl_image_tag ordered_drug.drug.pic.key%>
-      <%else%>
-        <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/greece.jpg" />
-      <%end%>
-      <div class="cart-card-infos">
-        <h2><%=ordered_drug.drug.name.downcase.capitalize%></h2>
-        <div class=cart-card-bottom>
-          <%= link_to minus_ordered_drug_path(ordered_drug) do %>
-            <%= image_tag "moins.png" %>
-          <% end %>
-          <p><%= ordered_drug.quantity %></p>
-          <%= link_to plus_ordered_drug_path(ordered_drug) do %>
-            <%= image_tag "plus.png" %>
+  <div class="pharmacy-show-top">
+    <%= link_to "< Continue shopping", drugs_path, class:"button-pharma-index"%>
+  </div>
+  <div class="cart-div">
+    <h1>Cart</h1>
+    <% @ordered_drugs.each do |ordered_drug| %>
+      <div class="cart-card">
+        <% if ordered_drug.drug.pic.attached?%>
+          <%=cl_image_tag ordered_drug.drug.pic.key%>
+        <%else%>
+          <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/greece.jpg" />
+        <%end%>
+        <div class="cart-card-infos">
+          <h2><%=ordered_drug.drug.name.downcase.capitalize%></h2>
+          <div class=cart-card-bottom>
+            <%= link_to minus_ordered_drug_path(ordered_drug) do %>
+              <%= image_tag "moins.png" %>
+            <% end %>
+            <p><%= ordered_drug.quantity %></p>
+            <%= link_to plus_ordered_drug_path(ordered_drug) do %>
+              <%= image_tag "plus.png" %>
+            <% end %>
+          </div>
+        </div>
+        <div class="cart-card-icons">
+          <%= link_to ordered_drug_path(ordered_drug), method: :delete do %>
+            <%= image_tag "trash.png" %>
           <% end %>
         </div>
       </div>
-      <div class="cart-card-icons">
-        <%= link_to ordered_drug_path(ordered_drug), method: :delete do %>
-          <%= image_tag "trash.png" %>
-        <% end %>
-      </div>
-    </div>
-  <% end %>
+    <% end %>
+  </div>
   <%= link_to pending_status_path(@order) do %>
     <button class="btn-checkout">Validate shopping cart</button>
   <% end %>
