--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,7 +1,5 @@
-<div class="nav-wrapper">
-  <div class="nav">
-    <%= link_to root_path, class: "navbar-brand" do %>
-      <%= image_tag "logo.png" %>
-    <% end %>
+<div class="nav">
+  <div class="navbar-brand">
+    <%= image_tag "logo.png" %>
   </div>
 </div>
