--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -26,11 +26,12 @@
   font-weight: lighter;
   opacity: 0.6;
   transition: opacity 0.3s ease;
+  margin: 0;
   }
 
   .btn {
   width: 100%;
-  margin: 25px 0;
+  margin: 0;
   border-radius: 32px;
   border: none;
   padding: 10px;
